<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Sound Recorder</string>
    
    <string name="settings_record">Record</string>
    <string name="settings_general">General</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_localization">Select language</string>
    <string name="summary_localization">Your selected language is %s, please reset the app to see changes</string>
  <string name="pref_title_scale">Scale</string>
  <string name="pref_title_mode">Mode</string>
  <string name="pref_title_bitrate">Bitrate</string>
  <string name="pref_title_samplerate">Sample rate</string>
  <string name="pref_title_quality">Quality</string>
  <string name="pref_title_save_path">Save files to</string>
    
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card">SD card is required</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" formatted="false">%02d:%02d</string>
    <string name="audio_db_title_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access">Unable to access external or internal storage</string>
    <string name="error_app_internal">Internal application error</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>
    <string name="default_record_name">untitled record</string>
    <string name="menu_view_record_list">View record list</string>
    <string name="menu_setting">Settings</string>
    <string name="delete_dialog_title">Do you want to delete current record?</string>
    <string name="overwrite_dialog_title">%s has already existed. Do you want to overwrite it?</string>
    <string name="preferences_title">Settings</string>
    <string name="pref_title_record_type">Record file type</string>
    <string name="prefDialogTitle_recordType">Please select file type</string>
    <string name="prefDefault_recordType">audio/mpeg</string>
    <string name="pref_title_enable_high_quality">Enable high quality</string>
    <string name="pref_summary_enable_high_quality">The audio file with high quality can be larger</string>
    <string name="pref_title_enable_sound_effect">Enable sound effect</string>
    <string name="pref_summary_enable_sound_effect">Playing sound effect when the state is changed</string>
    <string name="notification_recording">Recording...</string>
    <string name="notification_stopped">Recording is stopped</string>
    <string name="notification_warning">Low storage(less than %d minutes)...</string>
    <string name="record_list">Record list</string>
    <string name="sd_card_not_available">SD card is not available</string>
    <string name="call_record">Call record</string>
    <string name="open_file_explorer">Open file explorer</string>
    <string name="no_file">No record</string>
    <string name="mark_now">(Current)</string>
    <string name="second">%d second</string>
    <string name="minute">%d minute</string>
    <string name="hour">%d hour</string>
    <string name="call_record_or">or</string>
    <string name="dialog_play">Play</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_delete">Delete</string>
    <string name="alert_message_delete_record">Do you want to delete selected record?</string>

  <string-array name="prefEntries_mode">
    <item>MONO</item>
    <item>STEREO</item>
  </string-array>
  <string-array translatable="false" name="prefValues_mode">
    <item>16</item>
    <item>12</item>
  </string-array>
  <string-array name="pref_bitrate">
    <item>320</item>
    <item>256</item>
    <item>224</item>
    <item>192</item>
    <item>160</item>
    <item>128</item>
    <item>112</item>
    <item>96</item>
    <item>80</item>
    <item>64</item>
    <item>56</item>
    <item>48</item>
    <item>40</item>
    <item>32</item>
    <item>24</item>
    <item>16</item>
    <item>8</item>
  </string-array>
  <string-array name="pref_samplerate">
    <item>48000</item>
    <item>44100</item>
    <item>32000</item>
    <item>24000</item>
    <item>22050</item>
    <item>16000</item>
    <item>12000</item>
    <item>11025</item>
    <item>8000</item>
  </string-array>
  <string-array name="pref_scale">
    <item>1</item>
  </string-array>
  <string-array name="prefEntries_record_type">
    <item>MP3</item>
    <item>OGG</item>
  </string-array>
  <string-array name="prefValues_record_type">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string-array name="prefEntries_quality">
    <item>Best (Very slow)</item>
    <item>Near-Best (Not too slow)</item>
    <item>Good (fast)</item>
    <item>Ok (Really fast)</item>
    <item>Worst</item>
  </string-array>
  <string-array translatable="false" name="prefValues_quality">
    <item>0</item>
    <item>2</item>
    <item>5</item>
    <item>7</item>
    <item>9</item>
  </string-array>
  <string-array name="prefEntries_localization">
    		<item>English</item> 
    		<item>Arabic</item>
    		<item>Czech</item>
    		<item>Danish</item>
    		<item>German</item>
    		<item>Greek</item>
    		<item>Spanish</item>
    		<item>Persian</item>
    		<item>French</item>
    		<item>Hungarian</item>
    		<item>Italian</item>
    		<item>Hebrew</item>
    		<item>Korean</item>
    		<item>Dutch</item>
    		<item>Polish</item>
    		<item>Portuguese</item>
    		<item>Portuguese (Brazilian)</item>
    		<item>Russian</item>
    		<item>Slovak</item>
    		<item>Slovene</item>
    		<item>Turkish</item>
    		<item>Vietnamese</item>
    		<item>Chinese</item>
    		<item>Chinese (Simplified)</item>
    		<item>Chinese (Traditional)</item>
	</string-array>
  	<string-array name="prefValues_localization">
     		<item>en</item> 
     		<item>ar</item>
     		<item>cs</item>
     		<item>da</item>
     		<item>de</item>
     		<item>el</item>
     		<item>es</item>
     		<item>fa</item>
     		<item>fr</item>
     		<item>hu</item>
     		<item>it</item>
     		<item>iw</item>
     		<item>ko</item>
     		<item>nl</item>
     		<item>pl</item>
     		<item>pt</item>
     		<item>pt-BR</item>
     		<item>ru</item>
     		<item>sk</item>
     		<item>sl</item>
     		<item>tr</item>
     		<item>vi</item>
     		<item>zh</item>
     		<item>zh-CN</item>
     		<item>zh-TW</item>
	</string-array>
</resources>